<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_leave"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_leave" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_tentang"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="Tentang Aplikasi" />
    </group>

    <item android:title="Akun">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
